# VRP-Algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
google_tests/: CMakeLists.txt
notebooks/: annealing_routes_visualization.ipynb  clusterization.ipynb  compare_to_yandex.ipynb  create_requests.ipynb  greedy_algorithm.ipynb  route_visualization.ipynb  test_HCVRP_DRL_1.ipynb  test_HCVRP_DRL_2.ipynb  test_annealing_algorithm.ipynb  transfer_routes_to_mvrp_map.ipynb
python_lib/: utils.py  viz.py
scripts/: annealing_algorithm_main.cpp  annealing_algorithm_model.cpp  greedy_algorithm_main.cpp  main.cpp  save_problem_description_to_json.cpp  test.cpp  test_includes.cpp
src/algorithms/: algorithm.cpp  algorithm.h  iterative_algorithm.cpp  iterative_algorithm.h
src/algorithms/annealing/: AnnealingAlgorithm.cpp  AnnealingAlgorithm.h  annealing_algorithm.cpp  annealing_algorithm.h
src/algorithms/annealing/mutations/: mutation.cpp  mutation.h  swap_vertex_mutation.cpp  swap_vertex_mutation.h  transfer_mutation.cpp  transfer_mutation.h
src/algorithms/annealing/penalties/: distance_penalty.cpp  distance_penalty.h  penalty.cpp  penalty.h
src/matrices/: distance_matrix.cpp  distance_matrix.h  time_matrix.cpp  time_matrix.h
src/objects/: courier.cpp  courier.h  depot.cpp  depot.h  location.cpp  location.h  problem_objects.h  route.cpp  route.h
src/problem/: problem_description.cpp  problem_description.h  problem_solution.cpp  problem_solution.h  visit_time_scheduler.cpp  visit_time_scheduler.h
src/problem/penalties/: distance_penalty.cpp  distance_penalty.h  global_proximity_penalty.cpp  global_proximity_penalty.h  out_of_time_penalty.cpp  out_of_time_penalty.h  penalties.cpp  penalties.h  penalty.h
src/problem/problem_initialization/: problem_initialization.cpp  problem_initialization.h  problem_initialization_simple.cpp  problem_initialization_simple.h
src/utils/: common_utils.cpp  common_utils.h  file_utils.cpp  files_utils.cpp  files_utils.h  random_utils.cpp  random_utils.h  time_utils.cpp  time_utils.h
test_data/inputs/medium_test_1/: problem_description.json  request.json
test_data/inputs/simple_test_1/: problem_description.json  request.json
test_data/results/annealing/medium_test_1/: 1000000_iterations_checkpoints_1.json  1000000_iterations_penalty_1.json  1000000_iterations_routes_1.json  100000_iterations_checkpoints_1.json  100000_iterations_penalty_1.json  100000_iterations_penalty_history_1.json  100000_iterations_routes_1.json
test_data/results/annealing/simple_test_1/: 1000000_iterations_checkpoints_1.json  1000000_iterations_penalty_1.json  1000000_iterations_routes_1.json  100000_iterations_checkpoints_1.json  100000_iterations_penalty_1.json  100000_iterations_penalty_history_1.json  checkpoints_1.json  penalty_history_1.json
test_data/simple_test_data/: couriers.json  depots.json  locations.json
vrp_algorithms_lib/algorithm/: annealing_algorithm.py  base_algorithm.py  greedy_algorithm.py  greedy_algorithm_v2.py  vrptw_drl_algorithm.py  yandex_algorithm.py
vrp_algorithms_lib/algorithm/clusterization/: base_clusterizer.py  clusterizer_name.py  kmeans_clusterizer.py
vrp_algorithms_lib/algorithm/neural_networks/common/: common_modules.py
vrp_algorithms_lib/algorithm/neural_networks/hcvrp_drl/: objects.py
vrp_algorithms_lib/algorithm/neural_networks/hcvrp_drl/inference/: base_inference.py  greedy_inference.py
vrp_algorithms_lib/algorithm/neural_networks/hcvrp_drl/models/: greedy_model.py  model_base.py
vrp_algorithms_lib/algorithm/neural_networks/vrptw_drl/: objects.py  objects_test.py  test_utils.py  train_utils.py
vrp_algorithms_lib/algorithm/neural_networks/vrptw_drl/inference/: base_inference.py  beam_inference.py  greedy_inference.py  sample_inference.py  sequential_inference.py
vrp_algorithms_lib/algorithm/neural_networks/vrptw_drl/models/: attention_model.py  attention_model_test.py  attention_model_with_euclidean_distance_matrix.py  attention_neural_network.py  common_utils.py  greedy_model.py  model_base.py  model_metric_calculator.py  model_with_prepared_solution.py
vrp_algorithms_lib/algorithm/neural_networks/vrptw_drl/models/modules/: graph_encoder.py  location_selection_decoder.py  (+3 more)
vrp_algorithms_lib/algorithm/neural_networks/vrptw_drl/train/: common_utils.py  common_utils_test.py  dataset_with_prepared_solutions.py  simple_dataset.py  train_utils.py
vrp_algorithms_lib/analytical_tools/: analyze.py  viz.py  viz_problem_description.py  viz_requests.py
vrp_algorithms_lib/analytical_tools/routes_mutations/: routes_mutation_base.py  swap_random_neighbouring_vertices_withing_route.py  swap_random_vertices_from_different_routes.py  swap_random_vertices_within_route.py
vrp_algorithms_lib/analytical_tools/routes_similarity/: all_routes_similarity_metrics.py  arc_difference.py  route_difference.py  routes_similarity_equality_metric.py  routes_similarity_metric_base.py
vrp_algorithms_lib/common_tools/: date_helpers.py  file_utils.py  misc.py  misc_test.py
vrp_algorithms_lib/problem/: models.py  penalty_calculator.py  test_models.py  test_utils.py  visit_time_scheduler.py  yandex_compatibility.py
vrp_algorithms_lib/problem/metrics/: all_metric_calculators.py  base_metric_calculator.py  distance_calculator.py  global_proximity_distance_calculator.py  out_of_time_calculator.py  out_of_time_count_calculator.py  out_of_time_share_calculator.py  proximity_distance_calculator.py
vrp_algorithms_lib/problem/penalties/: base_penalty_calculator.py  distance_penalty_calculator.py  global_proximity_penalty_calculator.py  out_of_time_penalty_calculator.py  total_penalty_calculator.py
(+3 files in other folders)
